--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,23 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "name": "Python: Module",
+            "type": "python",
+            "request": "launch",
+            "module": "pip"
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "python": "${command:python.interpreterPath}",
+            "program": "${file}",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "envFile": "${workspaceFolder}/.env",
+            "console": "integratedTerminal"
+        },
         {
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
